[gd_scene load_steps=2 format=3]

[ext_resource type="Script" path="res://scenes/ui/admin_panel.gd" id="1"]

[node name="AdminPanel" type="PanelContainer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 300.0
offset_top = 50.0
offset_right = -20.0
offset_bottom = -20.0
visible = false
script = ExtResource("1")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 2

[node name="TitleLabel" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "Admin / Balance Panel (F12)"
horizontal_alignment = 1

[node name="ButtonRow" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 8

[node name="ReloadBtn" type="Button" parent="VBoxContainer/ButtonRow"]
layout_mode = 2
text = "Reload JSON"

[node name="ApplyBtn" type="Button" parent="VBoxContainer/ButtonRow"]
layout_mode = 2
text = "Apply"

[node name="ExportBtn" type="Button" parent="VBoxContainer/ButtonRow"]
layout_mode = 2
text = "Export JSON"

[node name="ResetBtn" type="Button" parent="VBoxContainer/ButtonRow"]
layout_mode = 2
text = "Reset Match"

[node name="ScrollContainer" type="ScrollContainer" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="Content" type="VBoxContainer" parent="VBoxContainer/ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="StateLabel" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "--- Derived State ---"
